# triptych

./: .env  .gitignore  Cargo.toml  README.md  future.md  todo.db  todo.db-shm  todo.db-wal
migrations/: 20250923014629_create_tasks_table.sql  20250925191244_add_item_order_to_tasks.sql  20250930194903_initial_schema.sql
src/: app.rs  cli.rs  daemon.rs  main.rs  migrations.rs  nlp.rs  sync.rs  todo.db  todo.db-wal  ui.rs
src/nlp/: ollama_client.rs  parser.rs  regex_patterns.rs  rules.rs  types.rs
src/sync/: cache.rs  calendar.rs  config.rs  daemon.rs  email.rs  mod.rs  ollama.rs  worker.rs
