[package]
name = "Triptych"
version = "0.1.0"
edition = "2024"

[dependencies]

sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
tokio = { version = "1", features = ["full"] }
