[package]
name = "Triptych"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
once_cell = "1.19"
lru = "0.16.1"
strsim = "0.11"
anyhow = "1.0"
clap = { version = "4.5.48", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.29.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
mailparse = "0.16.1"
keyring = "3.6.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

async-imap = { version = "0.11", optional = true, default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = { version = "0.3", optional = true }
native-tls = "0.2"

icalendar = { version = "0.17.4", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
email-sync = ["async-imap", "tokio-native-tls"]
calendar-sync = ["icalendar"]
async-imap = ["dep:async-imap"]
tokio-native-tls = ["dep:tokio-native-tls"]
