[package]
name = "Triptych"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.11+spec-1.1.0"
regex = "1.0"
nom = "7"
once_cell = "1.19"
lru = "0.16.1"
strsim = "0.11"
anyhow = "1.0"
clap = { version = "4.5.48", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

icalendar = { version = "0.17.4", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
calendar-sync = ["icalendar"]
